--- a/PudelkoUnitTests/PudelkoUnitTests.csproj
+++ b/PudelkoUnitTests/PudelkoUnitTests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\pudelko\pudelko.csproj" />
+    <ProjectReference Include="..\PudelkoLib\PudelkoLib.csproj" />
   </ItemGroup>
 
 </Project>
